# alzabo

./: .dockerignore  .flake8  .gitattributes  .gitignore  Dockerfile  Makefile  README.md  alzabo.es9.yaml  alzabo.local.yaml  alzabo.server.yaml  docker-compose.gpu.yaml  docker-compose.yaml  pyproject.toml  requirements.in  requirements.osx.txt  requirements.unix.txt
.github/workflows/: build.yaml  test.yaml
alzabo/: __init__.py  cli.py  config.py
alzabo-gui/: .eslintrc  index.html  package-lock.json  package.json
alzabo-gui/src/: App.tsx  types.ts
alzabo/api/: __init__.py
alzabo/client/: analyzer.py  api_client.py  application.py  commands.py  midi_client.py  monome_client.py  pattern_factory.py  recorder.py  synthdefs.py
alzabo/core/: ast.py  audio.py  utils.py
alzabo/praetor-gui/: .prettierrc  index.html  package.json
alzabo/worker/: __init__.py  app.py  ast.py  audio.py  milvus.py  tasks.py
data/ast/: audioset_labels.csv  audioset_model.pth
docs/: presentation.ipynb
praetor/: config.py  constants.py
praetor-gui/: .prettierignore  package-lock.json  package.json
praetor-gui/src/: App.tsx  CorpusExplorer.tsx  api.ts  config.ts  types.ts
praetor/api/: __init__.py  ast.py  audio.py  basic.py  middleware.py  query.py  scsynth.py
praetor/client/: __init__.py  api_client.py  application.py  buffer_manager.py  commands.py  listener.py  midi_client.py  monome_client.py  pattern_factory.py  performer.py  recorder.py  synthdefs.py
praetor/core/: milvus.py  pipeline.py  s3.py  scsynth.py
tests/: conftest.py  test_cli.py
tests/api/: conftest.py  (+1 more)
(+42 files in other folders)
